--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         </div>
     </div>
     <section id="serv" class="mt-3 bg-light">
-        <div class="container">
+        <div class="container mt-4">
             <h3 class="text-center fw-bold mb-4">Outros Serviços</h3>
             <div class="row g-4 justify-content-center">
                 <div class="col-12 col-md-6 col-lg-6 d-flex service-item">
