--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="marquee-item">📞 Atendimento rápido pelo WhatsApp</div>
                 <div class="marquee-item">🛠️ Serviços automotivos</div>
                 <div class="marquee-item">🚚 Rodas de caminhão</div>
-                 <div class="marquee-item">🏷️ Promoções imperdíveis hoje!</div>
+                <div class="marquee-item">🏷️ Promoções imperdíveis hoje!</div>
                 <div class="marquee-item">💳 Até 6x no boleto ou cartão</div>
                 <div class="marquee-item">📞 Atendimento rápido pelo WhatsApp</div>
                 <div class="marquee-item">🛠️ Serviços automotivos</div>
@@ -75,7 +75,7 @@
             </a>
 
             <div class="mx-auto">
-                <img src="img/peb2023.png" class="img-center-navbar img-fluid peb m" alt="Imagem Central">
+                <img src="img/peb2023.png" class="img-center-navbar img-fluid peb" alt="Imagem Central">
             </div>
 
             <div class="d-flex gap-3 align-items-center mt-3">
@@ -521,9 +521,11 @@
                     <i class="fa-solid fa-video me-2 mb-2"></i>
                     <h4 class="fw-bold">Assista o vídeo</h4>
                 </div>
-                <p>A solução mais econômica, segura e sustentável para manter sua frota rodando!</p>
-                <a href="https://wa.me/558000002146?text=Ol%C3%A1!%20Tenho%20interesse%20em%20recapar%20pneus"
-                    class="btn btn-outline-success fw-bold btn-orc mt-1">Quero recapar meus pneus</a>
+                <div class="align-items-center recap-btn">
+                    <p class="fw-bold">A solução mais econômica, segura e sustentável para manter sua frota rodando!</p>
+                    <a href="https://wa.me/558000002146?text=Ol%C3%A1!%20Tenho%20interesse%20em%20recapar%20pneus"
+                        class="btn btn-outline-success fw-bold btn-orc mt-1">Quero recapar meus pneus</a>
+                </div>
             </div>
             <div class="col-12 col-md-8 order-2 order-md-1 mt-1 mb-3">
                 <div class="ratio ratio-16x9 mt-2">
@@ -580,7 +582,15 @@
             </div>
         </div>
 
-        <div class="top-marquee2 mt-3">
+    <div class="container-fluid mt-2 d-flex justify-content-center align-items-center gap-2 flex-wrap p-5">
+        <img src="img/petronas.png" class="img-fluid industry2" alt="">
+        <img src="img/mobil.png" class="img-fluid industry2" alt="">
+        <img src="img/texaco.png" class="img-fluid industry2" alt="">
+        <img src="img/cofap.png" class="img-fluid industry2" alt="">
+        <img src="img/frasle.png" class="img-fluid industry2" alt="">
+    </div>
+
+        <div class="top-marquee2">
             <div class="marquee-track">
                 <div class="marquee-item">Cambagem</div>
                 <div class="marquee-item">Caster</div>
@@ -610,7 +620,7 @@
 
     <button id="btn-topo" class="btn-topo">
         <span class="ms-1 me-1">↑</span>
-    </button> 
+    </button>
 
     <footer class="bg-dark text-light py-4">
         <div class="container">
@@ -659,8 +669,12 @@
                             <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
                         </a>
                     </div>
+                    <div>
+                        <img src="img/peb2023.png" class="img-center-navbar img-fluid peb ms-2 mt-2"
+                            alt="Imagem Central">
+                    </div>
                 </div>
-                <div class="col-12 col-md-3 mt-5">
+                <div class="col-12 col-md-3 mt-4">
                     <div class="payment gap-3 justify-content-center justify-content-md-start mb-3">
                         <img class="visa mt-1 me-3" src="img/visa.png" alt="">
                         <img class="master mt-2 me-3" src="img/master.png" alt="">
@@ -704,7 +718,9 @@
                 <img class="fiat mt-2 mb-5" src="img/fiat.png" alt="">
                 <img class="iveco mt-2 mb-5" src="img/iveco.png" alt="">
                 <br>
-                <small class="ms-2 mb-5">© 2025 Grupo Curinga — Todos os direitos reservados.</small>
+                <small class="ms-2 mb-5">Condições especiais para o mês vigente. Consulte condições de pagamento
+                    e parcelamento. Imagens meramente ilustrativas.<br>
+                    © 2025 Grupo Curinga — Todos os direitos reservados.</small>
             </div>
         </div>
     </footer>
