--- a/index.html
+++ b/index.html
@@ -582,12 +582,12 @@
             </div>
         </div>
 
-    <div class="container-fluid mt-2 d-flex justify-content-center align-items-center gap-2 flex-wrap p-5">
+    <div class="container-fluid mt-2 d-flex justify-content-center align-items-center gap-2 flex-wrap p-5 varejo">
         <img src="img/petronas.png" class="img-fluid industry2" alt="">
         <img src="img/mobil.png" class="img-fluid industry2" alt="">
         <img src="img/texaco.png" class="img-fluid industry2" alt="">
         <img src="img/cofap.png" class="img-fluid industry2" alt="">
-        <img src="img/frasle.png" class="img-fluid industry2" alt="">
+        <!-- <img src="img/frasle.png" class="img-fluid industry2" alt=""> -->
     </div>
 
         <div class="top-marquee2">
