--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </a>
 
             <div class="mx-auto">
-                <img src="img/peb2023.png" class="img-center-navbar img-fluid peb" alt="Imagem Central">
+                <a href="#ofertas">
+                    <img src="img/superofertas.png" class="img-center-navbar img-fluid peb" alt="Imagem Central"> 
+                </a>
             </div>
 
             <div class="d-flex gap-3 align-items-center mt-3">
@@ -574,7 +576,7 @@
                 <div class="col-12 col-md-6 col-lg-6 d-flex service-item ">
                     <i class="fa-solid fa-screwdriver-wrench text-danger fs-3 me-3"></i>
                     <div>
-                        <h5 class="fw-semibold mb-1">Mecânica geral</h5>
+                        <h5 class="fw-semibold">Mecânica geral</h5>
                         <p>Serviços completos de manutenção e reparos no veículo, incluindo freios, suspensão, motor
                             e revisões preventivas.</p>
                     </div>
@@ -582,7 +584,7 @@
             </div>
         </div>
 
-    <div class="container-fluid mt-2 d-flex justify-content-center align-items-center gap-2 flex-wrap p-5 varejo">
+    <div class="container-fluid d-flex justify-content-center align-items-center gap-2 flex-wrap p-5 varejo">
         <img src="img/petronas.png" class="img-fluid industry2" alt="">
         <img src="img/mobil.png" class="img-fluid industry2" alt="">
         <img src="img/texaco.png" class="img-fluid industry2" alt="">
