--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div class="mx-auto">
                 <a href="#ofertas">
-                    <img src="img/superofertas.png" class="img-center-navbar img-fluid peb" alt="Imagem Central"> 
+                    <img src="img/superofertas.png" class="img-center-navbar img-fluid ofertas" alt="Imagem Central"> 
                 </a>
             </div>
 
