--- a/index.html
+++ b/index.html
@@ -774,11 +774,11 @@
                 </div>
             </div>
             <div class="text-center pt-4 mt-5 border-top border-secondary align-items-center">
-                <img class="fiat mt-2 mb-5" src="img/fiat.png" alt="">
-                <img class="iveco mt-2 mb-5" src="img/iveco.png" alt="">
+                <img class="fiat mt-2 mb-3" src="img/fiat.png" alt="">
+                <img class="iveco mt-2 mb-3" src="img/iveco.png" alt="">
                 <br>
                 <small class="ms-2 mb-5">Condições especiais para o mês vigente. Consulte condições de pagamento
-                    e parcelamento. Imagens meramente ilustrativas.<br>
+                    e parcelamento. Imagens meramente ilustrativas.<br><br>
                     © 2025 Grupo Curinga — Todos os direitos reservados.</small>
             </div>
         </div>
