--- a/index.html
+++ b/index.html
@@ -588,7 +588,8 @@
             </div>
             <div class="col-12 col-md-8 order-2 order-md-1 mt-1 mb-3">
                 <div class="ratio ratio-16x9 mt-2">
-                    <video class="rounded video-recap" controls>
+                    <video class="rounded video-recap" poster="img/thumbnail.jpg" muted loop
+                    playsinline controls>
                         <source src="https://egw.curingapneus.com.br/assinaturas/matriz/recapagem.mp4" type="video/mp4">
                         Seu navegador não suporta vídeos MP4.
                     </video>
