--- a/index.html
+++ b/index.html
@@ -498,7 +498,9 @@
             <div class="retangulo-menor ms-2"></div>
             <div class="retangulo-menor ms-2"></div>
 
-            <h3 class="fw-bold text-center flex-grow-1 mx-3 prod color-ea3131">Super Ofertas</h3>
+            <h3 class="fw-bold text-center flex-grow-1 mx-3 prod color-ea3131">
+                <img src="img/dezembro.png" class="img-fluid img-ofertas" alt="">
+            </h3>
 
             <div class="retangulo-menor me-2">
             </div>
