--- a/index.html
+++ b/index.html
@@ -568,8 +568,9 @@
                 <h2 class="fw-bold">Paticipe da Black dos Pneus!</h2>
                 <p>Na compra de 2 ou 4 pneus, ganhe descontos de até R$560. Clique abaixo, gere seu voucher no site
                     e utilize na loja Curinga mais próxima.</p>
-                <a href="https://blackdospneus.com.br/" class="btn btn-outline-success fw-bold btn-orc">Quero
-                    garantir meu desconto</a>
+                <a href="https://blackdospneus.com.br/" class="btn btn-outline-success fw-bold btn-orc">
+                    <i class="fa-brands fa-whatsapp me-1"></i>
+                    Quero garantir meu desconto</a>
             </div>
         </div>
     </div>
@@ -588,12 +589,13 @@
                 <div class="align-items-center recap-btn">
                     <p class="fw-bold">A solução mais econômica, segura e sustentável para manter sua frota rodando!</p>
                     <a href="https://wa.me/558000002146?text=Ol%C3%A1!%20Tenho%20interesse%20em%20recapar%20pneus"
-                        class="btn btn-outline-success fw-bold btn-orc mt-1">Quero recapar meus pneus</a>
+                        class="btn btn-outline-success fw-bold btn-orc mt-1"><i class="fa-brands fa-whatsapp me-1"></i>
+                        Quero recapar pneus</a>
                 </div>
             </div>
             <div class="col-12 col-md-8 order-2 order-md-1 mt-1 mb-3">
                 <div class="ratio ratio-16x9 mt-2">
-                    <video class="rounded video-recap" poster="img/thumbnail.jpg" muted loop controls>
+                    <video class="rounded" poster="img/thumbnail.jpg" muted loop controls>
                         <source src="https://egw.curingapneus.com.br/assinaturas/matriz/recapagem.mp4" type="video/mp4">
                         Seu navegador não suporta vídeos MP4.
                     </video>
@@ -775,8 +777,12 @@
                 </div>
             </div>
             <div class="text-center pt-4 mt-5 border-top border-secondary align-items-center">
-                <img class="fiat mt-2 mb-3" src="img/fiat.png" alt="">
-                <img class="iveco mt-2 mb-3" src="img/iveco.png" alt="">
+                <a href="https://curingafiat.com.br/" class="t-none">
+                    <img class="fiat mt-2 mb-3" src="img/fiat.png" alt="Curinga Fiat">
+                </a>
+                <a href="https://curingaiveco.com.br/" class="t-none">
+                    <img class="iveco mt-2 mb-3" src="img/iveco.png" alt="Curinga Iveco">
+                </a>
                 <br>
                 <small class="ms-2 mb-5">Condições especiais para o mês vigente. Consulte condições de pagamento
                     e parcelamento. Imagens meramente ilustrativas.<br><br>
@@ -797,7 +803,7 @@
                 </div>
                 <div class="modal-footer">
                     <a href="https://wa.me/558000002146?text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es"
-                        class="btn btn-success">Eu quero!</a>
+                        class="btn btn-success fw-bold"><i class="fa-brands fa-whatsapp me-1"></i>Eu quero!</a>
                 </div>
             </div>
         </div>
