--- a/index.html
+++ b/index.html
@@ -130,10 +130,21 @@
             </div>
         </div>
 
+        <div class="py-2 d-flex align-items-center justify-content-between">
+            <div class="retangulo2b"></div>
+            <div class="retangulo-menor2 ms-2"></div>
+            <div class="retangulo-menor2 ms-2"></div>
+
+            <h3 class="fw-bold text-center flex-grow-1 mx-3 text-white">Nossas Categorias</h3>
+
+            <div class="retangulo-menor2 me-2"></div>
+            <div class="retangulo-menor2 me-2"></div>
+            <div class="retangulo1b"></div>
+        </div>
+
         <div class="py-3 categorie-container">
             <div class="container my-3">
                 <div class="row g-3">
-                    <h3 class="text-center fw-bold mb-2 text-white">Nossas Categorias</h3>
                     <div class="col-6 col-md-3">
                         <div class="position-relative overflow-hidden rounded categorie shine-img">
                             <a href="#passeio">
@@ -777,7 +788,7 @@
                 </div>
             </div>
             <div class="text-center pt-4 mt-5 border-top border-secondary align-items-center">
-                <a href="https://curingafiat.com.br/" class="t-none">
+                <a href="https://www.curinga.com.br/" class="t-none">
                     <img class="fiat mt-2 mb-3" src="img/fiat.png" alt="Curinga Fiat">
                 </a>
                 <a href="https://curingaiveco.com.br/" class="t-none">
