--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
             </div>
         </div>
 
-        <div class="py-2 d-flex align-items-center justify-content-between">
-            <div class="retangulo2b"></div>
+        <div class="py-2 d-flex align-items-center justify-content-between mt-3">
+            <!-- <div class="retangulo2b"></div>
             <div class="retangulo-menor2 ms-2"></div>
-            <div class="retangulo-menor2 ms-2"></div>
+            <div class="retangulo-menor2 ms-2"></div> --> 
 
             <h3 class="fw-bold text-center flex-grow-1 mx-3 text-white">Nossas Categorias</h3>
 
+           <!-- <div class="retangulo-menor2 me-2"></div>
             <div class="retangulo-menor2 me-2"></div>
-            <div class="retangulo-menor2 me-2"></div>
-            <div class="retangulo1b"></div>
+            <div class="retangulo1b"></div> -->
         </div>
 
         <div class="py-3 categorie-container">
